// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CrossProductSearchInput /> matches snapshot with as primary product 1`] = `
<ContextProvider
  value={
    Object {
      "activeIndex": 0,
      "primaryProduct": "",
      "products": Array [
        "CONFLUENCE",
        "JIRA",
      ],
    }
  }
>
  <CrossProductSearchInput
    debounceTime={0}
    forwardRef={null}
    isExpanded={true}
    isLoading={true}
    onBack={[MockFunction]}
    onInput={[MockFunction]}
    onNavigate={[MockFunction]}
    onOpen={[MockFunction]}
    value=""
  />
</ContextProvider>
`;

exports[`<CrossProductSearchInput /> matches snapshot with secondary products 1`] = `
<ContextProvider
  value={
    Object {
      "activeIndex": 1,
      "primaryProduct": "",
      "products": Array [
        "CONFLUENCE",
        "JIRA",
      ],
    }
  }
>
  <CrossProductSearchInput
    debounceTime={0}
    forwardRef={null}
    isExpanded={true}
    isLoading={true}
    onBack={[MockFunction]}
    onInput={[MockFunction]}
    onNavigate={[MockFunction]}
    onOpen={[MockFunction]}
    value=""
  />
</ContextProvider>
`;
